fix(Table): align odd/even modifiers with CSS nth (#1724)
Because we start counting the tr inside `thead` we did not get the same when using "no" modifier. This PR aligns both to start on `<tr>` inside a table header row.

--- a/packages/dnb-eufemia/src/components/table/style/themes/dnb-table-theme-ui.scss
+++ b/packages/dnb-eufemia/src/components/table/style/themes/dnb-table-theme-ui.scss
@@ -61,15 +61,15 @@
   // Needs a double & & for specificity
   & > tbody > tr,
   & &__tr,
-  & &__tr--odd {
-    background-color: var(--color-white);
+  & &__tr--even {
+    background-color: var(--color-lavender);
   }
 
   // Needs a double & & for specificity
-  & > tbody > tr:not(#{&}__tr--odd):nth-of-type(2n),
-  & &__tr:not(#{&}__tr--odd):nth-of-type(2n),
-  & &__tr--even {
-    background-color: var(--color-lavender);
+  & > tbody > tr:not(#{&}__tr--even):nth-of-type(2n),
+  & &__tr:not(#{&}__tr--even):nth-of-type(2n),
+  & &__tr--odd {
+    background-color: var(--color-white);
   }
 
   // Border
